--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         rel="stylesheet" 
         href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
         />
+    <link
+        href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
+        rel="stylesheet"
+        />
 </head>
 <body>
     <main>
@@ -24,13 +28,13 @@
           <nav>
             <ul>
                 <li><a href="#intro">About</a></li>
-                <li><a href="#image-with-projects">Work</a></li>
-                <li><a href="#work-together">Contact</a></li>
+                <li><a href="#projects">Work</a></li>
+                <li><a href="#work">Contact</a></li>
             </ul>
           </nav>  
         </header>
-        <div class="intro">
-            <h1>
+        <div id="intro">
+            <h1 id="welcome">
                 Hey I am Mimic
             </h1>
             <p>
@@ -38,7 +42,7 @@
             </p>
         </div>
         <div class="image-with-projects">
-            <h2 class="projects">
+            <h2 id="projects">
                 These are some of my projects
             </h2>
             <div class="image-wrap">
@@ -118,11 +122,11 @@
                 <button 
                 class="show-all" 
                 type="submit">
-                Show all<span>></span>
+                Show all<span></span>
                 </button>
         </div>
         <div class="work-together">
-            <h1 class="work">Let's work together...</h1>
+            <h1 id="work">Let's work together...</h1>
             <p class="first">How do you take your coffee?</p>
             <div class="social-icons">
                 <a 
