--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             **This is just a fake portfolio. All the projects and contact details given are not real.
         </p>
         <p>
-            © Created for freeCodeCamp<span>
-            <a href="https://www.freecodecamp.com/">
+            <span>© Created for freeCodeCamp
+            <a target="_blank" href="https://www.freecodecamp.com/">
             <i class="fa-brands fa-free-code-camp"></i>
             </a></span>
         </p>
